--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
-<!DOCTYPE>
-<html>
-    <head>
-        <meta 
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Simple Blogging Website</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>📝 My Simple Blog</h1>
+  </header>
+
+  <main>
+    <section id="posts-section">
+      <h2>Blog Posts</h2>
+      <div id="posts-list">
+        <!-- Blog posts will appear here -->
+      </div>
+    </section>
+
+    <section id="new-post-section">
+      <h2>Create New Post</h2>
+      <form id="post-form">
+        <input type="text" id="post-title" placeholder="Post Title" required />
+        <textarea id="post-content" placeholder="Write your post here..." required></textarea>
+        <button type="submit">Publish</button>
+      </form>
+    </section>
+  </main>
+
+  <script src="scripts.js"></script>
+</body>
 </html>
